# AutoTailor

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Process_Inbox.bat  README.md  README.ru.md  Set_Mode_BW.bat  Set_Mode_Color.bat  Set_Mode_Gray.bat  app.py  config.txt  process_inbox.py  process_scan.py  pyproject.toml  requirements.txt  setup_windows.bat
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy-huggingface.yml  lint_and_test.yml
configs/: config.en.json  config.ru.json  config.ua.json
src/autotailor/: cli.py  ocr.py  processor.py
tests/: test_processor.py
