[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autotailor"
version = "1.0.0"
description = "Automated, content-aware document scanner preprocessor and OCR verifier"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "opencv-python>=4.5.0",
    "numpy>=1.19.0",
    "pytesseract>=0.3.8",
    "pillow>=8.0.0",
]

[project.entry-points.console_scripts]
autotailor = "autotailor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "N"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["autotailor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

